# CDJ_DJM_Emulator

./: .gitignore  README.md  discovery.md
app/: Cargo.toml
app/crates/cdj-core/: Cargo.toml
app/crates/cdj-core/src/: audio.rs  beat_clock.rs  dbserver.rs  feth.rs  lib.rs  library.rs  net.rs  orchestrator.rs  player_state.rs  virtual_cdj.rs  virtual_djm.rs
app/crates/cdj-proto/: Cargo.toml
app/crates/cdj-proto/src/: announce.rs  beat.rs  claim.rs  dbserver.rs  error.rs  header.rs  lib.rs  status.rs
app/crates/cdjapp/: Cargo.toml  tauri.conf.json
app/crates/cdjapp/src/: main.rs
app/crates/cdjd/: Cargo.toml
app/crates/cdjd/src/: main.rs
ui/: index.html  package.json  vite.config.ts
ui/src/: App.svelte
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: main.rs
ui/src/lib/: Deck.svelte  Library.svelte
