[workspace]
resolver = "2"
members = ["crates/cdj-proto", "crates/cdj-core", "crates/cdjd"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
cdj-proto = { path = "crates/cdj-proto" }
cdj-core = { path = "crates/cdj-core" }
tokio = { version = "1.40", features = ["full"] }
bytes = "1.7"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
mac_address = "1.1"
if-addrs = "0.13"
