[package]
name = "cdjapp"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
cdj-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
