[package]
name = "cdjd"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "cdjd"
path = "src/main.rs"

[dependencies]
cdj-proto = { workspace = true }
cdj-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mac_address = { workspace = true }
if-addrs = { workspace = true }
